# Qt

TestQt/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  YourApp  YourApp.cbp  cmake_install.cmake  main.cpp
TestQt/inc/: Calculator.h  Menu.h  Plotter.h
TestQt/src/: Calculator.cpp  Menu.cpp  Plotter.cpp
